recreated invoice models and controller

--- a/test/fixtures/invoices.yml
+++ b/test/fixtures/invoices.yml
@@ -1,11 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  client_name: MyString
+  project_name: MyString
+  project_summary: MyString
+  amount_due: 9.99
+  date: 2016-05-29
+  user_id: 
+
+two:
+  client_name: MyString
+  project_name: MyString
+  project_summary: MyString
+  amount_due: 9.99
+  date: 2016-05-29
+  user_id: 
